Fixed alignment issues and added probability fields and calculate button

--- a/extension/binomial.css
+++ b/extension/binomial.css
@@ -1,17 +1,45 @@
-input {
-    height: 17px;
-    width: 60px;
+label.parameters {
+    display: inline-block;
+    width: 20px;
+    text-align: left;
+  }
+
+input.parameters {
+    width: 55px;
     border-top: none;
-    border-right: none;
     border-left: none;
-    border-bottom: 1.5px solid black;
+    border-right: none;
+    border-bottom-color: black;
+    border-bottom-style: solid;
 }
 
-body{
-    min-width: 200px;
+input.bounds {
+    width: 35px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom-color: black;
+    border-bottom-style: solid;
 }
 
-p{
-    font-size: 16px;
-    margin: 0px;
+body {
+    min-width: 230px;
+}
+
+button.calculate_button{
+
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+}
+
+button.calculate_button:hover {
+    background-color: #008CBA;
+    color: white;
+}
+
+.bottom_button{
+
+    margin-top:20px; 
+    text-align:center;
 }
